--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "start:prod": "NODE_ENV=production node server.js",
     "lint": "eslint",
-    "create-admin": "tsx scripts/create-admin.ts"
+    "create-admin": "tsx scripts/create-admin.ts",
+    "deploy:build": "npm run build && echo Build completed successfully!"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.4",
