--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npx drizzle-kit push && next build",
     "start": "next start",
     "start:prod": "NODE_ENV=production node server.js",
     "lint": "eslint",
@@ -12,6 +12,7 @@
     "deploy:build": "npm run build && echo Build completed successfully!"
   },
   "dependencies": {
+    "@libsql/client": "^0.17.0",
     "@radix-ui/react-slot": "^1.2.4",
     "@types/bcrypt": "^6.0.0",
     "@types/bcryptjs": "^2.4.6",
