--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
     "deploy:build": "npm run build && echo Build completed successfully!"
   },
   "dependencies": {
-    "@libsql/client": "^0.17.0",
+    "@neondatabase/serverless": "^1.0.2",
     "@radix-ui/react-slot": "^1.2.4",
     "@types/bcrypt": "^6.0.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/ws": "^8.18.1",
     "@uiw/react-md-editor": "^4.0.11",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
     "better-auth": "^1.4.10",
-    "better-sqlite3": "^12.6.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.45.1",
@@ -35,11 +35,11 @@
     "remove-markdown": "^0.6.2",
     "tailwind-merge": "^3.4.0",
     "tsx": "^4.21.0",
+    "ws": "^8.19.0",
     "zod": "^4.3.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
